<resources>
    <string name="app_name">Profile</string>
    <string name="avatar_title">Select Avatar</string>
    <string name="profile_title">User profile</string>
    <string name="paddingName">15dp</string>
    <string name="lblAddress">Address (*)</string>
    <string name="lblWeb">Web (*)</string>
    <string name="lblRequired">Required (*)</string>
    <string name="hintName">(name)</string>
    <string name="lblTitleName">Name (*)</string>
    <string name="hintEmail">(email)</string>
    <string name="defaultTextlblName">Pikachu</string>
    <string name="hintPhone">(phone)</string>
    <string name="hintAddress">(address)</string>
    <string name="hintWeb">(url)</string>
    <string name="avatar_select">Profile Save </string>
    <string name="profile_save">Menu Save </string>
    <string name="lblPhoneNumber">Phone Number (*)</string>
    <string name="lblEmail">email (*)</string>
    <string name="descriptionPikachu">Pikachu</string>
    <string name="descriptionCubone">Cubone</string>
    <string name="descriptionGyarados">Gyarados</string>
    <string name="descriptionBulbasur">Bulbasur</string>
    <string name="descriptionFeeBas">Feebas</string>
    <string name="descriptionJipplypuff">Jipplypuf</string>
    <string name="descriptionChikorita">Chikorita</string>
    <string name="descriptionGiratina">Giratina</string>
    <string name="descripcionPachirisu">Pachirisu</string>
    <string name="namePikachu">Pikachu</string>
    <string name="nameCubone">Cubone</string>
    <string name="nameGyarados">Gyarados</string>
    <string name="nameBulbasur">Bulbasur</string>
    <string name="nameJipplypuff">Jipplypuff</string>
    <string name="nameFeebas">Feebas</string>
    <string name="nameChikorita">Chikorita</string>
    <string name="nameGiratine">Giratine</string>
    <string name="namePachirisu">Pachirisu</string>
    <string name="descriptionDefaultImage">DefaultImage</string>
    <string name="descriptionPhone">Phone</string>
    <string name="descriptionEmail">Email</string>
    <string name="descriptionAddress">Address</string>
    <string name="descriptionWeb">Web</string>
    <string name="profile_invalid_name">Invalid Name</string>
    <string name="profile_invalid_address">Invalid Adress</string>
    <string name="profile_invalid_email">Invalid Email</string>
    <string name="profile_invalid_phonenumber">Invalid Phone Number</string>
    <string name="profile_invalid_web">Invalid Web</string>
    <string name="validateCorrect">User save successfully</string>
    <string name="defaultText" />
</resources>
