<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descriptionDefaultImage"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pikachu" />


    <TextView
        android:id="@+id/lblRequiredName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTitleName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textPersonName"
        android:text="@string/defaultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRequiredName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/imgPhonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descriptionPhone"
        app:layout_constraintBottom_toBottomOf="@+id/txtPhonenumber"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/txtPhonenumber"
        app:srcCompat="@drawable/ic_call_24dp" />

    <TextView
        android:id="@+id/lblRequiredEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:text="@string/defaultText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRequiredEmail" />

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:contentDescription="@string/descriptionEmail"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/txtEmail"
        app:srcCompat="@drawable/ic_email_24dp" />

    <EditText
        android:id="@+id/txtPhonenumber"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/hintPhone"
        android:inputType="phone"
        android:text="@string/defaultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblRequiredEmail" />

    <TextView
        android:id="@+id/lblRequiredPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/lblPhoneNumber"
        app:layout_constraintBottom_toTopOf="@+id/txtPhonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtPhonenumber"
        app:layout_constraintTop_toTopOf="@+id/lblRequiredEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblRequiredAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintAddress"
        android:inputType="textPersonName"
        android:text="@string/defaultText"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRequiredAddress" />

    <TextView
        android:id="@+id/lblRequiredWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintWeb"
        android:inputType="textPersonName"
        android:text="@string/defaultText"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRequiredWeb" />

    <TextView
        android:id="@+id/lblRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRequired"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeb" />

    <ImageView
        android:id="@+id/imgAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descriptionAddress"
        app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/txtAddress"
        app:layout_constraintTop_toTopOf="@+id/txtAddress"
        app:srcCompat="@drawable/ic_map_24dp" />

    <ImageView
        android:id="@+id/imgWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descriptionWeb"
        app:layout_constraintBottom_toBottomOf="@+id/txtWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/txtWeb"
        app:layout_constraintTop_toTopOf="@+id/txtWeb"
        app:srcCompat="@drawable/ic_web_24dp" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:background="@color/avatar_label_background"
        android:padding="@dimen/margin"
        android:text="@string/defaultTextlblName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
