...
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/lblAvatar1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:textAlignment="center"
        android:text="@string/namePikachu"
        app:layout_constraintBottom_toTopOf="@+id/imgAvatar4"
...
